# yeehaw

./: AGENTS.md  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CITATION.cff  Cargo.toml  INVENTORY.md  README.md  TODO.txt  cliff.toml
.github/workflows/: preflight.yml
benches/: agg_bench.rs  analyzer.rs  index-bench.rs
bitpacker/: Cargo.toml
columnar/: Cargo.toml
columnar/columnar-cli-inspect/: Cargo.toml
columnar/columnar-cli-inspect/src/: main.rs
columnar/src/: block_accessor.rs  iterable.rs
common/: Cargo.toml
examples/: aggregation.rs  basic_search.rs  custom_collector.rs  custom_tokenizer.rs  date_time_field.rs  deleting_updating_documents.rs  faceted_search.rs  faceted_search_with_tweaked_score.rs  fuzzy_search.rs  index_from_multiple_threads.rs  index_with_json.rs  integer_range_search.rs  ip_field.rs  iterating_docs_and_positions.rs  json_field.rs  phrase_prefix_search.rs  pre_tokenized_text.rs  snippet.rs  stop_words.rs  warmer.rs
ownedbytes/: Cargo.toml
query-grammar/: Cargo.toml
query-grammar/src/: infallible.rs
scripts/: preflight.sh
src/: compat_tests.rs  functional_test.rs  lib.rs  macros.rs
src/aggregation/: agg_req.rs  mod.rs  segment_agg_result.rs
src/collector/: count_collector.rs  custom_score_top_collector.rs  facet_collector.rs  filter_collector_wrapper.rs  mod.rs  multi_collector.rs  top_collector.rs  top_score_collector.rs  tweak_score_top_collector.rs
src/core/: executor.rs  mod.rs  searcher.rs
src/directory/: directory.rs  mmap_directory.rs
sstable/: Cargo.toml
stacker/: Cargo.toml
tokenizer-api/: Cargo.toml
(+74 files in other folders)
