[package]
name = "tantivy-query-grammar"
version = "0.24.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]
license = "MIT"
categories = ["database-implementations", "data-structures"]
description = """Search engine library"""
homepage = "https://github.com/triblespace/yeehaw"
repository = "https://github.com/triblespace/yeehaw"
readme = "README.md"
keywords = ["search", "information", "retrieval"]
edition = "2024"

[dependencies]
nom = "7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
