[package]
name = "tantivy-tokenizer-api"
version = "0.5.0"
license = "MIT"
edition = "2021"
description = "Tokenizer API of tantivy"
homepage = "https://github.com/triblespace/yeehaw"
repository = "https://github.com/triblespace/yeehaw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
