[package]
name = "tantivy-columnar-inspect"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
yeehaw = {path="../.."}
columnar = {path="../", package="tantivy-columnar"}
common = {path="../../common", package="tantivy-common"}

[workspace]
members = []

[profile.release]
debug = true
#debug-assertions = true
#overflow-checks = true
